--- a/package.json
+++ b/package.json
@@ -1,13 +1,52 @@
 {
-  "name": "@./source",
+  "name": "@kuiiksoft/mqtt-project",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
+    "@nx/eslint": "19.6.1",
+    "@nx/eslint-plugin": "19.6.1",
+    "@nx/jest": "19.6.1",
     "@nx/js": "19.6.1",
+    "@nx/nest": "^19.6.1",
+    "@nx/node": "19.6.1",
+    "@nx/web": "19.6.1",
+    "@nx/webpack": "19.6.1",
     "@nx/workspace": "19.6.1",
-    "nx": "19.6.1"
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@types/jest": "^29.5.12",
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "~18.16.9",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "nx": "19.6.1",
+    "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "^5.5.4",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.2.3",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/microservices": "^10.4.1",
+    "@nestjs/platform-express": "^10.0.2",
+    "@serialport/parser-readline": "^12.0.0",
+    "mqtt": "^5.10.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
+    "serialport": "^12.0.0",
+    "tslib": "^2.3.0",
+    "yaml-js": "^0.3.1"
   }
 }
