--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/microservices": "^10.4.1",
     "@nestjs/platform-express": "^10.0.2",
     "@serialport/parser-readline": "^12.0.0",
