refactoring and reorganization of code

--- a/.env.template
+++ b/.env.template
@@ -7,10 +7,21 @@
 # ##########################################################################################
 
 # -------- Config to MQTT Edge Agent --------- #
-# MQTT Broker info
+# MQTT Broker
 KS_EDGEAGENT_BROKER_URL="mqtt://localhost:1883" # Broker mqtt url
-# Client connection info
+# Client connection
 KS_EDGEAGENT_CLIENT_ID=""                       # Id to authenticate with the broker
 KS_EDGEAGENT_CLIENT_TOKEN=""                    # Token to authenticate with the broker
 
 KS_EDGEAGENT_CLIENT_QOS=1                       # General quality of service (option: 0,1,2)
+
+# -------- Config to MQTT Broker --------- #
+# MQTT Broker
+KS_BROKER_PORT=1883               # Port to listen on for MQTT connections
+KS_BROKER_ID="kuiiksoft"          # Aedes broker unique identifier (default: uuidv4())
+KS_BROKER_TRANSPORT="tcp"         # Broker layer transport (tcp, ws)
+KS_BROKER_CONCURRENCY=100         # Maximum number of concurrent messages delivered by mq
+KS_BROKER_QUEUELIMIT=42           # Maximum number of queued messages before client session is established
+KS_BROKER_MAXCLIENTSIDLENGTH=23   # Option to override MQTT 3.1.0 clients Id length limit
+KS_BROKER_CONNECTTIMEOUT=30000    # Maximum waiting time in milliseconds waiting for a [CONNECT][CONNECT] packet
+KS_BROKER_HEARTBEATINTERVAL=60000 # Interval in millisconds at which server beats its health signal in $SYS/<aedes.id>/heartbeat topic.
