--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "~18.16.9",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "eslint": "~8.57.0",
@@ -33,6 +34,7 @@
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "^5.5.4",
+    "verdaccio": "^5.0.4",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
@@ -43,11 +45,18 @@
     "@nestjs/microservices": "^10.4.1",
     "@nestjs/platform-express": "^10.0.2",
     "@serialport/parser-readline": "^12.0.0",
+    "aedes": "^0.51.3",
+    "aedes-server-factory": "^0.2.1",
     "mqtt": "^5.10.0",
+    "mqtt-packet": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "serialport": "^12.0.0",
     "tslib": "^2.3.0",
+    "uuid": "^10.0.0",
     "yaml-js": "^0.3.1"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
