fix mqtt broker and client

--- a/config/.env.template
+++ b/config/.env.template
@@ -25,6 +25,8 @@ KS_BROKER_QUEUELIMIT=42            # Maximum number of queued messages before cl
 KS_BROKER_MAXCLIENTSIDLENGTH=23    # Option to override MQTT 3.1.0 clients Id length limit
 KS_BROKER_CONNECTTIMEOUT=30000     # Maximum waiting time in milliseconds waiting for a [CONNECT][CONNECT] packet
 KS_BROKER_HEARTBEATINTERVAL=60000  # Interval in millisconds at which server beats its health signal in $SYS/<aedes.id>/heartbeat topic.
+KS_BROKER_HTTP_PORT=8081           # Port to listen on for HTTP connections
+KS_BROKER_HTTP_HOSTNAME="0.0.0.0"  # Hostname to listen on for HTTP connections
 
 # -------- Config to MQTT Database --------- #
 # Main Database
