init broker auth

--- a/config/.env.template
+++ b/config/.env.template
@@ -17,16 +17,17 @@ KS_EDGEAGENT_CLIENT_QOS=1                       # General quality of service (op
 
 # -------- Config to MQTT Broker --------- #
 # MQTT Broker
-KS_BROKER_PORT=1883                # Port to listen on for MQTT connections
 KS_BROKER_ID="kuiiksoft"           # Aedes broker unique identifier (default: uuidv4())
+KS_BROKER_PORT_MQTT=1883           # Port to listen on for MQTT connections
+MS_BROKER_PORT_HTTP=8081           # Port to listen on for HTTP connections
+KS_BROKER_PORT_WS=8082             # Port to listen on for websocket connections
+KS_BROKER_HOSTNAME="0.0.0.0"       # Hostname to listen on for MQTT connections
 KS_BROKER_TRANSPORT="tcp"          # Broker layer transport (tcp, ws)
 KS_BROKER_CONCURRENCY=100          # Maximum number of concurrent messages delivered by mq
 KS_BROKER_QUEUELIMIT=42            # Maximum number of queued messages before client session is established
 KS_BROKER_MAXCLIENTSIDLENGTH=23    # Option to override MQTT 3.1.0 clients Id length limit
 KS_BROKER_CONNECTTIMEOUT=30000     # Maximum waiting time in milliseconds waiting for a [CONNECT][CONNECT] packet
 KS_BROKER_HEARTBEATINTERVAL=60000  # Interval in millisconds at which server beats its health signal in $SYS/<aedes.id>/heartbeat topic.
-KS_BROKER_HTTP_PORT=8081           # Port to listen on for HTTP connections
-KS_BROKER_HTTP_HOSTNAME="0.0.0.0"  # Hostname to listen on for HTTP connections
 
 # -------- Config to MQTT Database --------- #
 # Main Database
