--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.1.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/event-emitter": "^2.0.4",
