add initial setup for ui-components library and frontend pages

--- a/config/.env.template
+++ b/config/.env.template
@@ -36,9 +36,20 @@ KS_DB_PORT=5432                   # Database port
 KS_DB_USERNAME="admin"            # Database user
 KS_DB_PASSWORD="admin"            # Database password
 KS_DB_NAME="mqtt_project"         # Database name
-KS_DATABASE_SSL="false"           # Database ssl
-KS_DATABASE_SYNCHRONIZE="false"   # Database synchronize
-KS_DATABASE_LOGGING="false"       # Database logging
+KS_DB_SSL="false"                 # Database ssl
+KS_DB_SYNCHRONIZE="false"         # Database synchronize
+KS_DB_LOGGING="false"             # Database logging
+
+# -------- Config to MQTT Cache --------- #
+# Main Cache
+KS_CACHE_TTL=60                   # Cache time to live
+KS_CACHE_SCHEME="redis"           # Cache scheme (redis, rediss)
+KS_CACHE_HOST="localhost"         # Cache host
+KS_CACHE_PORT=6379                # Cache port
+KS_CACHE_PASSWORD="admin"         # Cache password
+KS_CACHE_RECONNECTTIME=50         # Cache reconnect time
+KS_CACHE_TLS="false"              # Cache tls
+KS_CACHE_KEEPALIVE=1000           # Cache keep alive in milliseconds
 
 # -------- Config to MQTT Project Api --------- #
 # Http Api
@@ -46,9 +57,11 @@ KS_API_HOST="0.0.0.0"                 # Api host
 KS_API_PORT=8080                      # Api port
 KS_API_GLOBALPREFIX="api"             # Api global prefix
 
-# Auth
-KS_API_AUTH_JWT_ACCESS_PUBLICKEYPATH="config/jwt-access-public.pem"     # Public key to verify the token
-KS_API_AUTH_JWT_ACCESS_PRIVATEKEYPATH="config/jwt-access-private.pem"   # Private key to sign the token
+# Auth JWT
+KS_API_AUTH_JWT_ACCESS_PUBLICKEY=""                                     # Public key to verify the token (takes precedence over the value in api.auth.jwt.access.publicKey when the file exists)
+KS_API_AUTH_JWT_ACCESS_PUBLICKEYPATH="config/jwt-access-public.pem"     # Public key path to verify the token
+KS_API_AUTH_JWT_ACCESS_PRIVATEKEY=""                                    # Private key to sign the token
+KS_API_AUTH_JWT_ACCESS_PRIVATEKEYPATH="config/jwt-access-private.pem"   # Private key path to sign the token (takes precedence over the value in api.auth.jwt.access.privateKey when the file exists)
 KS_API_AUTH_JWT_ACCESS_TIME="15m"                                       # Time in string describing a time span zeit/ms. Eg: 60, '2 days', '10h', '7d'
 KS_API_AUTH_JWT_CONFIRMATION_SECRET=""                                  # Secret to sign the token
 KS_API_AUTH_JWT_CONFIRMATION_TIME="1h"                                  # Time in string describing a time span zeit/ms. Eg: 60, '2 days', '10h', '7d'
@@ -58,14 +71,16 @@ KS_API_AUTH_JWT_REFRESH_SECRET=""                                       # Secret
 KS_API_AUTH_JWT_REFRESH_TIME="7d"                                       # Time in string describing a time span zeit/ms. Eg: 60, '2 days', '10h', '7d'
 
 # Auth Providers
+# Google
 KS_API_AUTH_PROVIDER_GOOGLE_CLIENTID=""                                                     # Google client id
 KS_API_AUTH_PROVIDER_GOOGLE_CLIENTSECRET=""                                                 # Google secret
 KS_API_AUTH_PROVIDER_GOOGLE_AUTHORIZATIONURL="https://accounts.google.com/o/oauth2/v2/auth" # Google authorization url
 KS_API_AUTH_PROVIDER_GOOGLE_TOKENURL="https://www.googleapis.com/oauth2/v4/token"           # Google token url
 KS_API_AUTH_PROVIDER_GOOGLE_USERPROFILEURL="https://www.googleapis.com/oauth2/v3/userinfo"  # Google user profile url
-KS_API_AUTH_PROVIDER_GOOGLE_CALLBACKURL="http://localhost:8080/api/auth/google/callback"        # Google callback url
+KS_API_AUTH_PROVIDER_GOOGLE_CALLBACKURL="http://localhost:8080/api/auth/google/callback"    # Google callback url
 KS_API_AUTH_PROVIDER_GOOGLE_SCOPE='["email", "profile"]'                                    # Google scope
 
+# Clerk
 KS_API_AUTH_PROVIDER_CLERK_CLIENTID=""                                              # Clerk client id
 KS_API_AUTH_PROVIDER_CLERK_CLIENTSECRET=""                                          # Clerk secret
 KS_API_AUTH_PROVIDER_CLERK_AUTHORIZATIONURL=""                                      # Clerk authorization url
