--- a/package.json
+++ b/package.json
@@ -20,12 +20,18 @@
     "@nx/nest": "^19.6.1",
     "@nx/next": "^19.6.1",
     "@nx/node": "19.6.1",
+    "@nx/react": "19.6.1",
+    "@nx/rollup": "19.6.1",
     "@nx/web": "19.6.1",
     "@nx/webpack": "19.6.1",
     "@nx/workspace": "19.6.1",
+    "@rollup/plugin-url": "^8.0.2",
+    "@svgr/rollup": "^8.1.0",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@swc/jest": "~0.2.36",
     "@testing-library/react": "15.0.6",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
@@ -55,6 +61,8 @@
     "nx": "19.6.1",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
+    "rollup": "^4.14.0",
+    "swc-loader": "0.1.15",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
@@ -63,7 +71,11 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.9.1",
+    "@keyv/redis": "^4.0.0",
     "@nestjs/axios": "^3.1.0",
+    "@nestjs/cache-manager": "^2.3.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/event-emitter": "^2.0.4",
@@ -73,19 +85,30 @@
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@serialport/parser-readline": "^12.0.0",
+    "@tanstack/react-query": "^5.59.17",
     "aedes": "^0.51.3",
     "aedes-server-factory": "^0.2.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "cache-manager": "^5.7.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.454.0",
     "mqtt": "^5.10.0",
     "mqtt-packet": "^9.0.0",
     "next": "14.2.3",
-    "next-auth": "^4.24.8",
+    "next-auth": "^5.0.0-beta.25",
+    "next-themes": "^0.3.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -94,13 +117,18 @@
     "pg": "^8.13.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.53.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "serialport": "^12.0.0",
+    "sonner": "^1.7.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.20",
     "uuid": "^10.0.0",
-    "yaml-js": "^0.3.1"
+    "yaml-js": "^0.3.1",
+    "zod": "^3.23.8"
   },
   "nx": {
     "includedScripts": []
