--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,7 +21,9 @@
       "@kuiiksoft/core/database": ["libs/core/database/src/index.ts"],
       "@kuiiksoft/passport-clerk": ["libs/shared/passport-clerk/src/index.ts"],
       "@kuiiksoft/shared/mqtt-broker": ["libs/shared/mqtt-broker/src/index.ts"],
-      "@kuiiksoft/shared/mqtt-client": ["libs/shared/mqtt-client/src/index.ts"]
+      "@kuiiksoft/shared/mqtt-client": ["libs/shared/mqtt-client/src/index.ts"],
+      "@kuiiksoft/ui/components": ["libs/ui/components/src/index.ts"],
+      "@kuiiksoft/ui/components/*": ["libs/ui/components/src/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
